welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: ')' expected but integer literal found.
if (negative==true && a>0 || negative==true b>0)
                                              ^posNeg:8: error: illegal start of simple expression
}
^